# neo4j-cdc-sync

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  deploy.sh  environment.yml
.github/workflows/: secret-scan.yml
generators/: README.md  social_network.py
heartbeat/: Dockerfile  heartbeat.py
kafka-connect/: .dockerignore  Dockerfile  README.md
python/: preflight.py  pyproject.toml  test_bulk_cdc.py  test_live_cdc.py  verify_cdc.py  verify_cdc_ready.py
python/utils/: __init__.py  cdc_utils.py  neo4j_client.py
terraform/: .snyk  .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/aci/: main.tf  outputs.tf  variables.tf
terraform/modules/acr/: main.tf  outputs.tf  variables.tf
terraform/modules/aura-instance/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/event-hubs/: main.tf  outputs.tf  variables.tf
terraform/scripts/: configure_connectors.py  get_aura_token.py
